# clinic-chat

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ingest.yml
config/: index_schema.yaml
docker/: Dockerfile.backend  Dockerfile.client
requirements/: backend.txt  base.txt  client.txt
src/: app.py  ingest.py
