[project]
name = "clinic-chat"
version = "0.1.0"
description = "Clinic Chat application"
requires-python = ">=3.12"
dependencies = [
    "ruff==0.11.0",
    "python-dotenv==1.0.1",
    "streamlit==1.43.2",
    "streamlit-pills==0.3.0",
    "openai==1.66.3",
    "llama-index==0.12.24",
    "llama-index-llms-openai==0.3.25",
    "llama-index-embeddings-huggingface==0.5.2",
    "llama-index-vector-stores-redis==0.5.0",
    "llama-index-storage-docstore-redis",
    "tiktoken==0.9.0",
    "GitPython",
    "htmltabletomd",
    "llama-index-readers-google",
    "openpyxl",
    "redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.lint]
extend-select = [
  # by default, ruff enables all F and a subset of E rules
  # for a description of rulesets and examples, see:
  # https://docs.astral.sh/ruff/rules/
  "B",      # bugbear - identifies likely bugs
  "C4",     # flake8-comprehensions - identifies redundant calls in comprehensions
  "D",      # pydocstyle - requires docstrings on all public modules/functions/classes
  "I",      # isort
  "N801",   # pep8-naming - enforce ClassNamesStyle
  "N804",   # pep8-naming - first arg of classmethod should be cls
  "N805",   # pep8-naming - first arg of method should be self
  "PD",     # pandas-vet
  "PLR2004",# Pylint no magic values!
  "PTH",    # prefer pathlib over os.path as seems to be the consensus
  "Q",      # flake8-quotes - double quotes preferred (like black)
  "S",      # flake8-bandit - security checks
  "UP",     # pyupgrade - requires preferred syntax in newer python versions
  "YTT",    # flake8-2020 - corrects code that doesn't anticipate 2 digit python minor version  
]

ignore = [
  "D415",   # allow first line of doctstrings to end without punctuation
  "B905"    # won't work on python <3.10
]

[tool.ruff.lint.pydocstyle]
convention = "google"